Режим эмуляции камеры под виндой.

--- a/Bwl.RaspberryPi.Camera/Bwl.RaspberryPi.Camera.vbproj
+++ b/Bwl.RaspberryPi.Camera/Bwl.RaspberryPi.Camera.vbproj
@@ -101,6 +101,8 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
+    <None Include="Resources\emulator1" />
+    <None Include="Resources\emulator2" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
