--- a/Bwl.RaspberryPi.Camera1/Bwl.RaspberryPi.Camera.vbproj
+++ b/Bwl.RaspberryPi.Camera1/Bwl.RaspberryPi.Camera.vbproj
@@ -4,26 +4,28 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AE15D142-EE13-44BB-BF84-4147C8201D4B}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <StartupObject>Sub Main</StartupObject>
-    <RootNamespace>Bwl.RaspberryPi.Camera.Test</RootNamespace>
-    <AssemblyName>Bwl.RaspberryPi.Camera.Test</AssemblyName>
+    <ProjectGuid>{9C6217E4-AA6A-4F85-93F3-7B55E24D7C85}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <StartupObject>
+    </StartupObject>
+    <RootNamespace>Bwl.RaspberryPi.Camera</RootNamespace>
+    <AssemblyName>Bwl.RaspberryPi.Camera</AssemblyName>
     <FileAlignment>512</FileAlignment>
-    <MyType>Console</MyType>
+    <MyType>Windows</MyType>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
-    <OutputPath>..\debug\bwl-rpi-cam-test\</OutputPath>
-    <DocumentationFile>Bwl.RaspberryPi.Camera.Test.xml</DocumentationFile>
+    <OutputPath>..\debug\bwl-rpi-cam\</OutputPath>
+    <DocumentationFile>Bwl.RaspberryPi.Camera.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
-    <UseVSHostingProcess>false</UseVSHostingProcess>
+    <RemoveIntegerChecks>false</RemoveIntegerChecks>
+    <Optimize>false</Optimize>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -32,8 +34,8 @@
     <DefineDebug>false</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
-    <OutputPath>..\release\bwl-rpi-cam-test\</OutputPath>
-    <DocumentationFile>Bwl.RaspberryPi.Camera.Test.xml</DocumentationFile>
+    <OutputPath>..\release\bwl-rpi-cam\</OutputPath>
+    <DocumentationFile>Bwl.RaspberryPi.Camera.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
@@ -49,26 +51,20 @@
   <PropertyGroup>
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="Bwl.Network.Transport, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\refs\bwl-network-transport\Bwl.Network.Transport.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-  </ItemGroup>
+  <PropertyGroup>
+    <RunPostBuildEvent>Always</RunPostBuildEvent>
+  </PropertyGroup>
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
     <Import Include="System" />
     <Import Include="System.Collections" />
     <Import Include="System.Collections.Generic" />
-    <Import Include="System.Diagnostics" />
     <Import Include="System.Linq" />
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App.vb" />
+    <Compile Include="CameraParameters.vb" />
+    <Compile Include="IRpiCam.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -85,17 +81,19 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="RpiCamMMAL.vb" />
+    <Compile Include="RpiCamVideo.vb" />
+    <Compile Include="RpiCamStill.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.vb</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
@@ -105,14 +103,38 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
+    <None Include="Resources\emulator1" />
+    <None Include="Resources\emulator2" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Bwl.RaspberryPi.Camera\Bwl.RaspberryPi.Camera.vbproj">
-      <Project>{e3cadeb9-2291-431d-9dcc-3177cea94861}</Project>
-      <Name>Bwl.RaspberryPi.Camera</Name>
-    </ProjectReference>
+    <Reference Include="Microsoft.Extensions.Logging.Abstractions">
+      <HintPath>..\refs\packages\Microsoft.Extensions.Logging.Abstractions.3.1.0\lib\netstandard2.0\Microsoft.Extensions.Logging.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="MMALSharp">
+      <HintPath>..\refs\packages\MMALSharp.0.6.0\lib\netstandard2.0\MMALSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="MMALSharp.Common">
+      <HintPath>..\refs\packages\MMALSharp.Common.0.6.0\lib\netstandard2.0\MMALSharp.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="MMALSharp.Processing">
+      <HintPath>..\refs\packages\MMALSharp.Processing.0.6.0\lib\netstandard2.0\MMALSharp.Processing.dll</HintPath>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Drawing.Common">
+      <HintPath>..\refs\packages\System.Drawing.Common.4.7.0\lib\net461\System.Drawing.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\refs\packages\System.Numerics.Vectors.4.4.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>"$(SolutionDir)tools\NetRevisionTool.exe" /patch "$(ProjectDir)My Project"</PreBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>"$(SolutionDir)tools\NetRevisionTool.exe" /restore "$(ProjectDir)My Project"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
