--- a/Bwl.RaspberryPi.Camera.TestWebNetCore/Bwl.RaspberryPi.Camera.TestWebNetCore.csproj
+++ b/Bwl.RaspberryPi.Camera.TestWebNetCore/Bwl.RaspberryPi.Camera.TestWebNetCore.csproj
@@ -7,11 +7,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.3" />
+    <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.113" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Bwl.RaspberryPi.Camera\Bwl.RaspberryPi.Camera.vbproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="bundleconfig.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="libman.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
